--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -33,7 +33,15 @@ body {
   color: white;
   width: 100%;
   flex: 1;
-  /* Allows this section to stretch to fill space if needed */
+}
+
+.ai-model-info-div {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  color: white;
+  width: 100%;
+  flex: 1;
 }
 
 .result-box {
